--- a/Help.Rmd
+++ b/Help.Rmd
@@ -408,6 +408,99 @@ DIC5 <- M5$BUGSoutput$DIC
 
 ```
 
+
+
+
+```{r echo=FALSE, results='hide'}
+random_model <- function(){
+  # This model takes into account a random effect for the site
+  # Likelihood
+  for(i in 1:N){
+    S[i] ~ dpois(lambda[i])
+    log(lambda[i]) <- mu.0 + gamma[site[i]] + b.prev * prev[i] + alpha_1 * Cov_2005[i] + alpha_2 * Cov_2006[i] + log(A[i])
+  }
+  for (j in 1:nb.sites){
+    gamma[j] ~ dnorm(0, tau.s)
+  }
+  # Priors
+  mu.0 ~ dnorm(0, 0.001)
+  sd.s ~ dunif(0, 100)
+  tau.s <- 1 / (sd.s * sd.s)
+  b.prev ~ dnorm(0, 1/100)
+  alpha_1 ~ dnorm(0, 1/100)
+  alpha_2 ~ dnorm(0, 1/100)
+} 
+
+# Make the data to use in jags
+datax <- list(
+  N = gopher$year %>% 
+    length(),
+  S = gopher$shells,
+  prev = gopher$standprev,
+  A = gopher$Area,
+  site = gopher$Site %>% 
+    as.numeric(),
+  nb.sites = gopher$Site %>% 
+    unique() %>% 
+    length(),
+  Cov_2005 = ifelse(gopher$year == 2005, 1, 0),
+  Cov_2006 = ifelse(gopher$year == 2006, 1, 0)
+)
+
+# Make a list of parameters to save
+params = c("mu.0", "b.prev", "sd.s", "alpha_1", "alpha_2")
+
+# Initial conditions
+init1 <- list(
+  "mu.0" = 0.5,
+  "b.prev" = 0.5,
+  "alpha_1" = 0.5,
+  "alpha_2" = 0.5,
+  "sd.s" = 0.5
+)
+init2 <- list(
+  "mu.0" = - 0.5,
+  "b.prev" = - 0.5,
+  "alpha_1" = -0.5,
+  "alpha_2" = -0.5,
+  "sd.s" = 1.5
+)
+init <- list(init1, init2)
+
+# Iteration parameters
+nb.iterations <- 10000
+nb.burnin <- 5000
+
+# Run the model
+M6 <- jags(
+  data = datax,
+  parameters.to.save = params,
+  inits = init,
+  model.file = random_model,
+  n.chains = 2,
+  n.iter = nb.iterations,
+  n.burnin = nb.burnin,
+  n.thin = 1,
+  quiet = TRUE
+)
+
+M6
+# On récupère les paramètres et on regarde leur distribution
+res6 <- M6$BUGSoutput$sims.matrix %>% 
+  as.data.frame()
+# Rétrotransformation
+
+shells6 <- matrix(NA,ncol=nrow(gopher),nrow=nrow(res6))
+for (i in 1:nrow(gopher)){
+  shells6[,i] <-gopher$Area[i] * exp(res6$mu.0 + res6$alpha_1 * gopher$Cov_2005[i] + res6$alpha_2 * gopher$Cov_2006[i] + res6$b.prev * gopher$standprev[i]+rnorm(1,mean=0, sd=res6$sd.s))
+}
+hist(shells6)
+mean(shells6)
+# Récupérons le DIC
+DIC6 <- M6$BUGSoutput$DIC
+
+```
+
 # 6. Modèle complet
 Nous considérons ici tous les paramètres dont nous avons parlé au dessus:
  - L'ordonnée à l'origine et l'offset
