--- a/ProjetHAB940B_2023_PAJOT_THEMEZE--LEROY.Rmd
+++ b/ProjetHAB940B_2023_PAJOT_THEMEZE--LEROY.Rmd
@@ -35,7 +35,7 @@ gopher <- read.csv(file = "./gopher.csv", header = TRUE, sep = ";", dec=".", str
 
 ## La variable à expliquer
 
-|   La variable d'intérêt à expliquer, est `Shells`, soit le nombre de carapaces de tortues récentes trouvées lors des relevés sur le terrain. Cette variable est un proxy pour estimer le nombre de tortues mortes d'une année sur l'autre.
+|   La variable d'intérêt à expliquer, est `Shells`, soit le nombre de carapaces de tortues récentes trouvées lors de relevés sur le terrain. Cette variable est un proxy pour estimer le nombre de tortues mortes d'une année sur l'autre.
 
 ## Les variables explicatives
 
@@ -86,7 +86,7 @@ La distribution du nombre de carapaces ressemble à une distribution de Poisson.
 
 La figure 3 donne plusieurs informations sur notre jeu de données.
 
-```{r echo=FALSE}
+```{r echo=FALSE, fig.align='center', fig.height=7}
 ggplot(gopher, aes(x=prev, y=shells,shape=year)) +
   geom_point() +
   facet_wrap(~Site)+
@@ -105,7 +105,7 @@ ggplot(gopher, aes(x=prev, y=shells,shape=year)) +
 
 |   Nous allons donc essayer de déterminer si la prévalence et l'année permettent d'expliquer les variations du nombre de carapaces. Nous avons vu que la prévalence et le nombre de carapaces trouvées diffère entre les sites et entre les années. Afin de pouvoir nous concentrer sur l'effet de la prévalence, nous allons mettre un effet aléatoire sur la variable `Site`. Nous pourrions faire de même pour la variable `Année` mais par souci de simplification, nous allons garder cette variable en effet fixe.
 
-```{r echo=FALSE}
+```{r echo=FALSE, fig.align='center', fig.height=7}
 area_site <- gopher$Area %>% 
     unique()
 m_shells_persite<-ddply(gopher, .(Site), summarize, mean=mean(shells))
@@ -146,7 +146,7 @@ Ceci se traduit en approche bayesienne par un modèle considérant les hypothès
 
 Nous avons donc :
 $$Shells_i\:\stackrel{i.i.d}{\sim} \: Pois(\lambda_i)\:avec\:i=1,..30\:le\:nombre\:d'observations$$\
-$$log(\lambda_i) =  log({aire_{i}}) + \mu_0 + \beta * prev_i, \:la\:fonction\:de\:lien$$ \newline 
+$$log(\lambda_i) =  log({aire_{i}}) + \mu_0 + \beta * prev_i$$, la fonction de lien\newline 
 Nous utilisons comme priors les distribution suivantes : \newline 
 $$\mu_0\:{\sim}\:\mathcal{N}(0, 100)$$
 $$\beta\:{\sim}\:\mathcal{N}(0, 100)$$
@@ -205,7 +205,7 @@ M1
 
 Nous vérifions que le modèle a bien convergé.
 
-```{r echo=FALSE}
+```{r echo=FALSE, fig.align='center', fig.height=7}
 # Regardons les traces
 traceplot(M1,mfrow = c(1, 3), varname = c('mu.0','b.prev','deviance'), ask = FALSE)
 par(mfrow=c(1, 1))
@@ -215,7 +215,7 @@ Les 2 chaînes se mélangent bien et convergent toutes deux. Ceci est aussi conf
 
 Nous regardons maintenant la distribution *a posteriori* et le moyenne ($\lambda$) du nombre de carapaces à partir des paramètres estimés par notre modèle. 
 
-```{r echo=FALSE}
+```{r echo=FALSE, fig.align='center', fig.height=7}
 # On récupère les résultats et on fait des histogrammes
 res1 <- M1$BUGSoutput$sims.matrix %>% 
   as.data.frame()
@@ -236,6 +236,7 @@ ggplot(shells1_1, aes(x=shells)) +
   labs(caption="Figure 5 : Distribution du nombre de carapaces pour le modèle 1",
        x="Carapaces",
        y="Comptage") + 
+  geom_label(aes(label=paste("Mean :", mean(shells1)), x=mean(shells1), y=1e5), col="blue") +
   theme(plot.caption = element_text(hjust=0, size=10, face="italic"),axis.title.x=element_text(size = 8), axis.title.y=element_text(size = 8))
 
 mean(shells1)
@@ -243,7 +244,7 @@ mean(shells1)
 
 Les valeurs estimées du modèle se prettent assez bien à prédire la distribution du nombre de carapaces. Regardons ce qu'il en est sur le nombre de carapaces en fonction de la prévalence en fonction du site et de l'année.
 
-```{r echo=FALSE}
+```{r echo=FALSE, fig.align='center', fig.height=7}
 mean_mu1 <- mean(res1$mu.0)
 mean_b1 <- mean(res1$b.prev)
 
@@ -824,6 +825,7 @@ data.frame(
   DICs = c("", DIC1, DIC2, DIC3, DIC4, DIC5, DIC6, "", DIC7, DIC8, DIC9)
 )
 ```
+
 # **Inférence et interprétation des résultats**
 
 Sur la base du meilleur modèle, donnez les estimations des paramètres
@@ -838,7 +840,8 @@ M6
 D'après la statistique de Gelman-Rubin $\hat{R}$ qui est inférieure à 1.1 pour chaque paramètre estimé, les chaînes convergent bien. Le `n.eff` de chaque paramètre est supérieur à 100.\newline Nous avons donc des estimations de nos paramètres qui sont stables et des chaines peu autocorrélées.
 
 Regardons maintenant, la distribution *a posteriori* et la moyenne du nombre de carapaces à partir des paramètres estimés par `M6`.
-```{r echo=FALSE}
+
+```{r echo=FALSE, fig.align='center', fig.height=7}
 # On récupère les paramètres et on regarde leur distribution
 res6 <- M6$BUGSoutput$sims.matrix %>% 
   as.data.frame()
@@ -876,7 +879,8 @@ M9
 D'après la statistqiue de Gelman-Rubin $\hat{R}$ qui est inférieure à 1.1 pour chaque paramètre estimé, les chaînes convergent bien. Le `n.eff` de chaque paramètre est supérieur à 100.\newline Nous avons donc des estimations de nos paramètres qui sont stables et des chaines peu autocorrélées.
 
 Regardons maintenant, la distribution *a posteriori* et la moyenne du nombre de carapaces à partir des paramètres estimés par `M9`.
-```{r echo=FALSE}
+
+```{r echo=FALSE, fig.align='center', fig.height=7}
 # On récupère les paramètres et on regarde leur distribution
 res9 <- M9$BUGSoutput$sims.matrix %>% 
   as.data.frame()
@@ -913,5 +917,3 @@ Selon nous, plusieurs choses pourraient éventuellement expliquer ces différenc
 - le choix de l'offset : nous avons pris l'aire des sites comme offset, alors que dans l'article ils utilisent le nombre de tortues totales par site.
 - des différences d'implémentation de la covariable `année` car nous ne mettons pas l'année en effet aléatoire
 - le choix des priors pour les effets aléatoires; car les auteurs ont testé deux implémentations possibles et nous ne savons pas s'ils ont retenu celle ou la variance inverse suit une loi uniforme ou celle où l'écart-type suit une loi uniforme.
-
-Eventuellement, mais moins probable selon nous, le f
