--- a/ProjetHAB940B_2023_PAJOT_THEMEZE--LEROY.Rmd
+++ b/ProjetHAB940B_2023_PAJOT_THEMEZE--LEROY.Rmd
@@ -58,7 +58,7 @@ summary(gopher)
 |   Nous avons un plan d'expérience équilibré avec un même nombre d'observations par site et par année. 
 Pour la prevalence `prev` la moyenne est supérieure à la médiane, c'est-à-dire que plus de 50% des valeurs sont inférieures à la moyenne. Il en est de même pour le nombre de carapces `shells`. De plus, pour la prévalence, la différence entre le troisème quartile et le minimum est d'environ 40, tout comme la différence entre le maximum et le 3ème quartile. Ainsi, la gamme de valeurs prise par 25% des données est égales à celle prise par 75% des données. Pour le nombre de carapaces, la gamme de valeurs prise par 25% des données est plus de trois fois supérieur à celle prise par 75% des données. Ceci est illustré par les *figures 1 et 2*.
 
-```{r echo=FALSE}
+```{r echo=FALSE,fig.align='center', fig.height=3}
 F1<-ggplot(data=gopher, aes(x=prev)) + 
   geom_histogram(bins=10, fill="blue", color="black") +
   geom_vline(aes(xintercept=mean(prev)), col = "red") +
@@ -86,7 +86,7 @@ La distribution du nombre de carapaces ressemble à une distribution de Poisson.
 
 La figure 3 donne plusieurs informations sur notre jeu de données.
 
-```{r echo=FALSE, fig.align='center', fig.height=7}
+```{r echo=FALSE, fig.align='center', fig.height=4}
 ggplot(gopher, aes(x=prev, y=shells,shape=year)) +
   geom_point() +
   facet_wrap(~Site)+
@@ -105,7 +105,7 @@ ggplot(gopher, aes(x=prev, y=shells,shape=year)) +
 
 |   Nous allons donc essayer de déterminer si la prévalence et l'année permettent d'expliquer les variations du nombre de carapaces. Nous avons vu que la prévalence et le nombre de carapaces trouvées diffère entre les sites et entre les années. Afin de pouvoir nous concentrer sur l'effet de la prévalence, nous allons mettre un effet aléatoire sur la variable `Site`. Nous pourrions faire de même pour la variable `Année` mais par souci de simplification, nous allons garder cette variable en effet fixe.
 
-```{r echo=FALSE, fig.align='center', fig.height=7}
+```{r echo=FALSE, fig.align='center', fig.height=4}
 area_site <- gopher$Area %>% 
     unique()
 m_shells_persite<-ddply(gopher, .(Site), summarize, mean=mean(shells))
@@ -121,8 +121,9 @@ ggplot(shells_area,aes(x=area_site, y=shells_mean, color=Sites)) +
   theme(plot.caption = element_text(hjust=0, size=10, face="italic"),axis.title.x=element_text(size = 8), axis.title.y=element_text(size = 8))
 ```
 
-|   D'après la *figure 4* les sites n'ont pas tous la même aire et il semble qu'un plus grand nombre de carapces sont trouvés sur les sites avec une plus grande aire. Afin de pourvoir comparer les sites entre eux, nous allons prendre le rapport entre le nombre de carapaces trouvées par site et l'aire du site.
+|   D'après la *figure 4* les sites n'ont pas tous la même aire et il semble qu'un plus grand nombre de carapces sont trouvés sur les sites avec une plus grande aire. Afin de pourvoir comparer les sites entre eux, nous allons prendre le rapport entre le nombre de carapaces trouvées par site et l'aire du site.\newline
 
+\newpage
 |   D'après les observations faites précedemment, nous souhaitons donc déterminer si : 
 - le nombre de carapaces récentes trouvées est correlée avec la prevalence pour *Mycoplasma agassizii* pour une année donnée.
 - le nombre de carapces récentes trouvées est plus grand dans les sites à haute prévalence par rapport aux sites à basse prévalence.
@@ -205,7 +206,7 @@ M1
 
 Nous vérifions que le modèle a bien convergé.
 
-```{r echo=FALSE, fig.align='center', fig.height=7}
+```{r echo=FALSE, fig.align='center', fig.height=3}
 # Regardons les traces
 traceplot(M1,mfrow = c(1, 3), varname = c('mu.0','b.prev','deviance'), ask = FALSE)
 par(mfrow=c(1, 1))
@@ -215,7 +216,7 @@ Les 2 chaînes se mélangent bien et convergent toutes deux. Ceci est aussi conf
 
 Nous regardons maintenant la distribution *a posteriori* et le moyenne ($\lambda$) du nombre de carapaces à partir des paramètres estimés par notre modèle. 
 
-```{r echo=FALSE, fig.align='center', fig.height=7}
+```{r echo=FALSE, fig.align='center', fig.height=3}
 # On récupère les résultats et on fait des histogrammes
 res1 <- M1$BUGSoutput$sims.matrix %>% 
   as.data.frame()
@@ -235,8 +236,7 @@ ggplot(shells1_1, aes(x=shells)) +
   geom_histogram(bins=10, fill="blue", color="black")+ 
   labs(caption="Figure 5 : Distribution du nombre de carapaces pour le modèle 1",
        x="Carapaces",
-       y="Comptage") + 
-  geom_label(aes(label=paste("Mean :", mean(shells1)), x=mean(shells1), y=1e5), col="blue") +
+       y="Comptage")+
   theme(plot.caption = element_text(hjust=0, size=10, face="italic"),axis.title.x=element_text(size = 8), axis.title.y=element_text(size = 8))
 
 mean(shells1)
@@ -244,7 +244,7 @@ mean(shells1)
 
 Les valeurs estimées du modèle se prettent assez bien à prédire la distribution du nombre de carapaces. Regardons ce qu'il en est sur le nombre de carapaces en fonction de la prévalence en fonction du site et de l'année.
 
-```{r echo=FALSE, fig.align='center', fig.height=7}
+```{r echo=FALSE, fig.align='center', fig.height=4}
 mean_mu1 <- mean(res1$mu.0)
 mean_b1 <- mean(res1$b.prev)
 
@@ -285,7 +285,7 @@ Pour l'ensemble des modèles, nous utilisons comme priors les distributions suiv
 - $\alpha_0\:{\sim}\:\mathcal{N}(0, 100),\:avec\:\:\alpha_0\:\:le\:\:coefficient\:\:associé\:\:à\:\:l'effet\:\:spécifique\:\:de\:\:l'année\:\:2004$
 - $\alpha_1\:{\sim}\:\mathcal{N}(0, 100),\:avec\:\:\alpha_1\:\:le\:\:coefficient\:\:associé\:\:à\:\:l'effet\:\:spécifique\:\:de\:\:l'année\:\:2005$
 - $\alpha_2\:{\sim}\:\mathcal{N}(0, 100),\:avec\:\:\alpha_2\:\:le\:\:coefficient\:\:associé\:\:à\:\:l'effet\:\:spécifique\:\:de\:\:l'année\:\:2006$
-- $\gamma_{i,j}\:{\sim}\:\mathcal{N}(0,\tau),\:avec\:\:\gamma_{i,j}\:\:le\:\:coefficient\:\:spécifique\:\:sur\:\:l'intercept\:\: associé\:\:\:à\:\:\:l'effet\:\:du\:\:j^{ème}\:\:site \ \:pour\:la\:i^{ème}\:observation\:,avec\:\:\tau\:=\:\sigma_{s}^2$
+- $\gamma_{i,j}\:{\sim}\:\mathcal{N}(0,\tau),\:avec\:\:\gamma_{i,j}$ le coefficient spécifique sur l'intercept  associé à l'effet du $j^{ème}$ site  pour la $i^{ème}$ observation ,avec $\tau\:=\:\sigma_{s}^2$
 - $\sigma_s\:{\sim}\:\mathcal{U}(0,100)$
 
 
@@ -818,6 +818,7 @@ DIC9 <- M9$BUGSoutput$DIC
 ```
 
 Les DICs de ces modèles sont les suivants : 
+
 *Tableau 2 : DICs des modèles* 
 ```{r echo=FALSE}
 data.frame(
@@ -841,7 +842,7 @@ D'après la statistique de Gelman-Rubin $\hat{R}$ qui est inférieure à 1.1 pou
 
 Regardons maintenant, la distribution *a posteriori* et la moyenne du nombre de carapaces à partir des paramètres estimés par `M6`.
 
-```{r echo=FALSE, fig.align='center', fig.height=7}
+```{r echo=FALSE, fig.align='center', fig.height=3}
 # On récupère les paramètres et on regarde leur distribution
 res6 <- M6$BUGSoutput$sims.matrix %>% 
   as.data.frame()
@@ -880,7 +881,7 @@ D'après la statistqiue de Gelman-Rubin $\hat{R}$ qui est inférieure à 1.1 pou
 
 Regardons maintenant, la distribution *a posteriori* et la moyenne du nombre de carapaces à partir des paramètres estimés par `M9`.
 
-```{r echo=FALSE, fig.align='center', fig.height=7}
+```{r echo=FALSE, fig.align='center', fig.height=3}
 # On récupère les paramètres et on regarde leur distribution
 res9 <- M9$BUGSoutput$sims.matrix %>% 
   as.data.frame()
